test_regress/t/t_interface_top_bad.out
%Error: t/t_interface_top_bad.v:17:19: Unsupported: Interfaced port on top level module
   ifc.counter_mp c_data
                  ^~~~~~
%Error: t/t_interface_top_bad.v:17:4: Parent cell's interface is not found: 'ifc'
   ifc.counter_mp c_data
   ^~~
%Error: Exiting due to
